--- a/src/Modul2/phpunit.xml.dist
+++ b/src/Modul2/phpunit.xml.dist
@@ -11,7 +11,7 @@
         <ini name="memory_limit" value="-1" />
         <server name="SERVER_VAR" value="SERVER_VAR_MODUL_2"/>
         <env name="ENV_VAR" value="ENV_VAR_MODUL_2" />
-        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak_vendors" />
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
         <env name="SYMFONY_PHPUNIT_REMOVE" value="modul2" />
         <env name="SYMFONY_PHPUNIT_VERSION" value="5.7" />
     </php>
