--- a/src/Modul2/phpunit.xml.dist
+++ b/src/Modul2/phpunit.xml.dist
@@ -12,7 +12,7 @@
         <server name="SERVER_VAR" value="SERVER_VAR_MODUL_2"/>
         <env name="ENV_VAR" value="ENV_VAR_MODUL_2" />
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
-        <env name="SYMFONY_PHPUNIT_REMOVE" value="modul2" />
+        <env name="SYMFONY_PHPUNIT_REMOVE" value="phpspec/prophecy" />
         <env name="SYMFONY_PHPUNIT_VERSION" value="5.7" />
     </php>
 
