--- a/src/Modul1/phpunit.xml.dist
+++ b/src/Modul1/phpunit.xml.dist
@@ -8,7 +8,8 @@
          bootstrap="tests/bootstrap.php"
 >
     <php>
-        <ini name="memory_limit" value="-1" />
+        <ini name="memory_limit" value="100M" />
+        <ini name="precision" value="7"/>
         <server name="SERVER_VAR" value="SERVER_VAR_MODUL_1"/>
         <env name="ENV_VAR" value="ENV_VAR_MODUL_1" />
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="disabled" />
